--- a/asset/index.css
+++ b/asset/index.css
@@ -1,12 +1,36 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+a{
+  color: #fff;
+  text-decoration: none;
+}
+body{
+  background-color: #000;
+  color: #fff;
+}
 header{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 header>img{
-  height: 100px;
-  width: 100px;
-  border-radius: 50%;
+  width: 100%;
+  max-width: 500px;
+}
+header>input{
+  width: 100%;
+  border: none;
+  outline: none;
+  height: 30px;
+  font-size: 20px;
+  text-align: center;
+  background-color: #4c4c4c;
+  color: #fff;
+}
+header>input::placeholder{
+  color: #aaa;
 }
 main{
   display: flex;
@@ -17,26 +41,35 @@ main>aside{
 }
 main>article{
   flex: auto;
+  background-color: #ddd;
+  color: #000;
 }
+
 main>aside>p{
-  background-color: black;
-  color: white;
   font-size: 20px;
-  line-height: 30px;
+  padding: 10px 0;
   text-align: center;
-  border-radius: 5px;
   cursor: pointer;
 }
 main>article{
   display: flex;
   flex-direction: column;
-  margin: 10px;
+}
+main>article>a{
+  color: #000;
+  text-decoration: none;
 }
 footer{
-  border-top: 2px black solid;
-  padding: 5px;
+  display: flex;
 }
 footer>a{
-  color: black;
-  margin: 5px;
+  flex: auto;
+  line-height: 50px;
+  text-align: center;
+  font-size: 20px;
+}
+footer>a:hover{
+  transition-duration: .5s;
+  background-color: #ddd;
+  color: #000;
 }
